--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
             <span class="pw" id="pw1"></span>
             <span class="pw" id="pw2"></span>
         </div>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
