--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
         <hr>
         <div id="passwords">
-            <span class="pw" id="pw1"></span>
-            <span class="pw" id="pw2"></span>
+            <span class="pw" id="pw1" onclick="copyPassword()"></span>
+            <span class="pw" id="pw2" onclick="copyPassword()"></span>
         </div>
         <script src="index.js" type="module"></script>
     </body>
